; ModuleID = '/home/carl/AnghaBench/esp-idf/components/app_update/test/extr_test_switch_ota.c_test_erase_last_app_rollback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/app_update/test/extr_test_switch_ota.c_test_erase_last_app_rollback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@boot_count = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"boot count %d\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"erase_last_app\00", align 1
@ESP_PARTITION_SUBTYPE_APP_FACTORY = common dso_local global i32 0, align 4
@ESP_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_erase_last_app_rollback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_erase_last_app_rollback() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  store i32 5, i32* @boot_count, align 4
  %2 = load i32, i32* @TAG, align 4
  %3 = load i32, i32* @boot_count, align 4
  %4 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %2, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = call %struct.TYPE_3__* (...) @get_running_firmware()
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %1, align 8
  %6 = load i32, i32* @TAG, align 4
  %7 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %6, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i32, i32* @ESP_PARTITION_SUBTYPE_APP_FACTORY, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @TEST_ASSERT_EQUAL(i32 %8, i32 %11)
  %13 = load i32, i32* @ESP_FAIL, align 4
  %14 = call i32 (...) @esp_ota_erase_last_boot_app_partition()
  %15 = call i32 @TEST_ESP_ERR(i32 %13, i32 %14)
  %16 = call i32 (...) @erase_ota_data()
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, ...) #1

declare dso_local %struct.TYPE_3__* @get_running_firmware(...) #1

declare dso_local i32 @TEST_ASSERT_EQUAL(i32, i32) #1

declare dso_local i32 @TEST_ESP_ERR(i32, i32) #1

declare dso_local i32 @esp_ota_erase_last_boot_app_partition(...) #1

declare dso_local i32 @erase_ota_data(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
